ลิ้งหน้าแรกไปหน้าอัพโหลด / กำลังทำโค้ด เลือกภาพจากคอมแล้วพรีวิวภาพ

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>BmiTest</title>
+  <title>BMI Web application from face images</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
